# vector-field-simul

./: .gitignore  CMakeLists.txt  package.xml
config/: controllers.yaml  gz_bridge.yaml
description/: robot.urdf.xacro  ros2_control.urdf.xacro
include/vector-field-simul/: algorithm.hpp
include/vector_field_simul/: algorithm.hpp
launch/: empty_world_simul.launch.py  launch_sim.launch.py  rsp.launch.py
matlab/: bag_reading.m  bag_test.asv  bag_test.m  circle_trajectory.asv  circle_trajectory.m  moving_trajectory_err.m  moving_trajectory_wp.m  simul.asv  simul.m
msg/: Potential.msg
src/: algorithm.cpp  field_node.cpp  run_alg.cpp
urdf/: create3_wrapper.urdf.xacro
worlds/: empty
